# clementine

./: CMakeLists.txt  Clementine.kdev4  main.cpp
config/: cut.root  cuttemp.root  daliridf.txt  minosridf.txt  plasticcut.root  plasticcuttemp.root
config/cuts/: 100Kr11plastic.root  100Kr3plastic.root  100Kr7plastic.root  100Kr8plastic.root  110Nb11plastic.root  110Nb11plasticempty.root  110Nb3plastic.root  110Nb3plasticempty.root  110Nb7plastic.root  110Nb7plasticempty.root  110Nb8plastic.root  110Nb8plasticempty.root  66Cr11plastic.root  66Cr11plasticempty.root  66Cr3plastic.root  66Cr3plasticempty.root  66Cr7plastic.root  66Cr7plasticempty.root  66Cr8plastic.root  66Cr8plasticempty.root  70Fe11plastic.root  70Fe3plastic.root  70Fe7plastic.root  70Fe8plastic.root  78Ni11plastic.root  78Ni11plasticempty.root  78Ni3plastic.root  78Ni3plasticempty.root  78Ni7plastic.root  78Ni7plasticempty.root  78Ni8plastic.root  78Ni8plasticempty.root  88Ge11plastic.root  88Ge3plastic.root  88Ge7plastic.root  88Ge8plastic.root  94Se11plastic.root  94Se3plastic.root  94Se7plastic.root  94Se8plastic.root  (+18 more)
config/cuts/70Fe/: 70Fe11plasticpedestal.root  70Fe11plasticregular.root  70FeF11plasticcharge.root  70FeF11plasticwerid.root
config/db/: BigRIPSPlastic.xml  ConfigMINOSDrift_fixed.txt  DALI.xml  MINOS.xml
config/db/DALI/: .~lock.DALI20150409.csv#  DALI.20150319.csv  DALI.20150320.csv  DALI.xml.101Rb.onlin  DALI.xml.85Ga  DALI.xml.89As_onlin  DALI.xml.95Br_onlin  DALI20150409.csv  DALI20150409.csv.backup  DALI20150428.csv  DALI20150501.csv  DALI20150502_np.csv  DALI20150503.csv
config/db/Focal/: FocalPlane_kr.xml
config/db/IC/: BigRIPSIC-101Rb.xml  BigRIPSIC.csv.20150429  BigRIPSIC.csv.20150502  BigRIPSIC.xml  BigRIPSIC.xml.89As  BigRIPSIC.xml.89As.1060  BigRIPSIC.xml.95Br.3025  BigRIPSIC.xml.95Br.3027  BigRIPSIC.xml.95Br.3029  BigRIPSIC.xml.95Br.3030  BigRIPSIC.xml.95Br.3034  BigRIPSIC.xml.95Br.3035  BigRIPSIC.xml.95Br.3039  BigRIPSIC.xml.95Br.3040  BigRIPSIC.xml.org
config/db/MINOS/: MINOS_aftercst.csv  MINOS_afterproj.xml  MINOS_agetcst.csv  MINOS_agetcst_DSSSD_SEASTAR1.csv  MINOS_agetcst_DSSSD_SEASTAR2_kr.xml  MINOS_agetproj.csv  MINOS_agetproj.xml
config/db/PPAC/: .~lock.BigRIPSPPAC.gamma15.csv#  BigRIPSPPAC.impact.csv  BigRIPSPPAC_kr.xml
config/db/Plastic/: .~lock.BigRIPSPlastic.IMPACT.csv#  BigRIPSPlastic.IMPACT.csv  BigRIPSPlastic.niikura.csv
config/db/TKE/: BigRIPSTKE.csv  BigRIPSTKE_F11.xml  BigRIPSTKE_T.xml
config/db/db/: BigRIPSIC.xml  BigRIPSPPAC.xml
config/db/db/DALI/: .~lock.DALI.20141102wtarget.csv#  DALI.xml.111Nb  DALI.xml.111Nb.45ns  DALI20150403.csv  DALI20150429.csv  DALI20150430.csv  DALI20150502.csv  DALI20150506.csv  DALI_kr.xml
config/db/db/Focal/: FocalPlane_kr.xml
config/db/db/IC/: BigRIPSIC.IMPACT.csv  (+10 more)
config/db2014/: BigRIPSIC_save20150311.xml  ConfigMINOSDrift.txt  DALI.xml  DALI.xml.Ferun  MINOS.xml  csv2xml.pl  xml2csv.pl
config/db2014/DALI/: DALI.csv  DALI.xml  DALI.xml.20140528  DALI.xml.20140531  DALI.xml.20140617  DALI.xml.20140715_2ndorder  DALI.xml.20140904  DALI.xml.20140908  DALI.xml.expt  DALI20140503.csv  DALI20140503_afterCr.csv  DALI20140506selftrigger.csv  DALI20140531.csv  DALI20140617.csv  DALI20140618.csv  DALI20140715_2ndorder.csv  DALI_Ferun.xml  DALI_NEW.csv
config/db2014/IC/: BigRIPSIC.csv  BigRIPSIC.xml  BigRIPSIC.xml.20150309.xml  BigRIPSIC.xml.expt  BigRIPSIC_Crsetting_ICped.csv  BigRIPSIC_Crsetting_ICped.xml  BigRIPSIC_Crsetting_woICped.xml  BigRIPSIC_setting3_Louis.xml
config/db2014/MINOS/: MINOS_afterproj.csv  MINOS_agetcst_DSSSD.csv  MINOS_agetcst_DSSSD.csv.old  MINOS_agetcst_DSSSD.xml  MINOS_agetcst_DSSSD.xml.AxisnotInverted  MINOS_agetcst_DSSSD.xml.old  MINOS_agetcst_DSSSD_20141218.csv  MINOS_agetproj.xml  mapping_seastar2.csv  showMINOScsv.sh
config/db2014/PPAC/: BigRIPCPPAC_Ni.xml  BigRIPSPPAC.csv  BigRIPSPPAC.csv.20140406  BigRIPSPPAC.csv.open  BigRIPSPPAC.gamma14.csv  BigRIPSPPAC.psp2014.csv  BigRIPSPPAC.psp2014.csv.mine  BigRIPSPPAC.psp2014.csv.r160  BigRIPSPPAC.psp2014.csv.r168  BigRIPSPPAC.psp2014.open.csv  BigRIPSPPAC.xml  BigRIPSPPAC.xml.20140704  BigRIPSPPAC.xml.20140707  BigRIPSPPAC.xml.psp14  BigRIPSPPAC_20140704.csv  BigRIPSPPAC_20140707.csv
config/db2014/Plastic/: BigRIPSPlastic.csv  BigRIPSPlastic_setting3_Louis.xml
config/db2014/TKE/: BigRIPSTKE.csv.psp14  BigRIPSTKE.csv.shiga
config/matrix2014/: F9F11_LargeAccAchr.mat.modifiedMatsu  F9F11_LargeAccAchr.mat.modifiedPieter  mat1.mat.modifiedPieter
include/: MakeAllTree_78Ni.hh  histogram_cuts.hh  histograms.hh  libconstant.h  treereader.hh
include/PID/: pid.h
include/corrections/: higherorder.h  minosdrift.h
include/cutclasses/: ICcut.h  chargestatecut.h  plasticcut.h  ppaccut.h  targetcut.h  triggercut.h
include/helper/: histogram_cuts.hh  libconstant.h  minos.h  progress.h  treereader.hh  txtwriter.h  zdssetting.h
src/: ConfigMINOSDrift_fixed.txt  MakeAllTree_78Ni.cpp  MakeMINOSOfflineCut.cpp  histogram_cuts.cpp  histograms.cpp  treereader.cpp
src/PID/: pid.cpp
src/corrections/: higherorder.cpp  minosdrift.cpp
src/cutclasses/: ICcut.cpp  chargestatecut.cpp  plasticcut.cpp  ppaccut.cpp  targetcut.cpp  triggercut.cpp
src/helper/: histogram_cuts.cpp  minos.cpp  progress.cpp  treereader.cpp  txtwriter.cpp  zdssetting.cpp
(+21 files in other folders)
